test mybatis plus UserTest

--- a/yard/skills/66-java/mp/src/main/resources/application.properties
+++ b/yard/skills/66-java/mp/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+# DataSource Config
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3307/imooc_mp
+spring.datasource.username=hero
+spring.datasource.password=1949.cn
 
+
+# Logger Config
+#logging.level.root: debug
