--- a/yard/skills/66-java/mp/src/main/resources/application.yaml
+++ b/yard/skills/66-java/mp/src/main/resources/application.yaml
@@ -8,7 +8,7 @@ spring:
 # Logger
 logging:
   level:
-    com.bbxyard.mp: trace
+    com.bbxyard.mp: debug
 mybatis-plus:
 #  config-location: classpath:/mapper/*Mapper.xml
   global-config:
