--- a/yard/skills/66-go/beego-demo/Makefile
+++ b/yard/skills/66-go/beego-demo/Makefile
@@ -1,6 +1,9 @@
 DATA_SUF = $(shell date +"%Y.%m.%d.%H.%M.%S")
 GUP_MSG = "Auto Commited at $(DATA_SUF)"
 
+PROJ_PATH = $(shell pwd)
+APP_NAME = beego-demo
+
 ifdef MSG
 	GUP_MSG = "$(MSG)"
 endif
@@ -9,13 +12,21 @@ endif
 # ####################################
 # Dashboard AREA
 # ####################################
+init:
+	go mod init $(APP_NAME)
 
 
 # ####################################
 # Kits AREA
 # ####################################
+gen: export GO111MODULE=off
+gen: export GOPATH=$(PROJ_PATH)
 gen:
 	bee generate scaffold user -fields="id:int64,name:string,gender:int,age:int" -driver=mysql -conn="hero@tcp(127.0.0.1:3307)/imooc_beego"
+
+run: export GO111MODULE=off
+run:
+	bee run
 
 
 # ####################################
