add eureka 启动脚本

--- a/yard/research/imooc-homepage-spring-cloud/Makefile
+++ b/yard/research/imooc-homepage-spring-cloud/Makefile
@@ -5,10 +5,15 @@ ifdef MSG
 	GUP_MSG = "$(MSG)"
 endif
 
+HOST := server1
+
 
 # ####################################
 # Dashboard AREA
 # ####################################
+start-eureka:
+	java -jar homepage-eureka/target/homepage-eureka-0.0.1-SNAPSHOT.jar -spring.profiles.active=$(HOST)
+
 build:
 	mvn clean package -Dmaven.test.skip=true -U
 
