add homepage-zuul 网关层

--- a/yard/research/imooc-homepage-spring-cloud/Makefile
+++ b/yard/research/imooc-homepage-spring-cloud/Makefile
@@ -11,6 +11,8 @@ HOST := server1
 # ####################################
 # Dashboard AREA
 # ####################################
+start-eureka-dev:
+	java -jar homepage-eureka/target/homepage-eureka-0.0.1-SNAPSHOT.jar
 start-eureka:
 	java -jar homepage-eureka/target/homepage-eureka-0.0.1-SNAPSHOT.jar --spring.profiles.active=$(HOST)
 
