--- a/yard/research/imooc-homepage-spring-cloud/homepage-eureka/src/main/resources/bootstrap.yml
+++ b/yard/research/imooc-homepage-spring-cloud/homepage-eureka/src/main/resources/bootstrap.yml
@@ -1,43 +1,43 @@
-spring:
-  application:
-    name: homepage-eureka
-  profiles: server1
-server:
-  port: 8011
-eureka:
-  instance:
-    hostname: server1
-    prefer-ip-address: false
-  client:
-    service-url:
-      defaultZone: http://server2:8012/eureka/,http://server3:8013/eureka/
-
----
-spring:
-  application:
-    name: homepage-eureka
-  profiles: server2
-server:
-  port: 8012
-eureka:
-  instance:
-    hostname: server2
-    prefer-ip-address: false
-  client:
-    service-url:
-      defaultZone: http://server1:8011/eureka/,http://server3:8013/eureka/
-
----
-spring:
-  application:
-    name: homepage-eureka
-  profiles: server3
-server:
-  port: 8013
-eureka:
-  instance:
-    hostname: server3
-    prefer-ip-address: false
-  client:
-    service-url:
-      defaultZone: http://server1:8011/eureka/,http://server2:8012/eureka/
+#spring:
+#  application:
+#    name: homepage-eureka
+#  profiles: server1
+#server:
+#  port: 8011
+#eureka:
+#  instance:
+#    hostname: server1
+#    prefer-ip-address: false
+#  client:
+#    service-url:
+#      defaultZone: http://server2:8012/eureka/,http://server3:8013/eureka/
+#
+#---
+#spring:
+#  application:
+#    name: homepage-eureka
+#  profiles: server2
+#server:
+#  port: 8012
+#eureka:
+#  instance:
+#    hostname: server2
+#    prefer-ip-address: false
+#  client:
+#    service-url:
+#      defaultZone: http://server1:8011/eureka/,http://server3:8013/eureka/
+#
+#---
+#spring:
+#  application:
+#    name: homepage-eureka
+#  profiles: server3
+#server:
+#  port: 8013
+#eureka:
+#  instance:
+#    hostname: server3
+#    prefer-ip-address: false
+#  client:
+#    service-url:
+#      defaultZone: http://server1:8011/eureka/,http://server2:8012/eureka/
