--- a/yard/research/imooc-homepage-spring-cloud/pom.xml
+++ b/yard/research/imooc-homepage-spring-cloud/pom.xml
@@ -4,6 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <modules>
         <module>homepage-eureka</module>
+        <module>homepage-zuul</module>
     </modules>
 
     <parent>
