--- a/yard/research/imooc-homepage-spring-cloud/homepage-service/homepage-common/pom.xml
+++ b/yard/research/imooc-homepage-spring-cloud/homepage-service/homepage-common/pom.xml
@@ -10,6 +10,21 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>homepage-common</artifactId>
+    <packaging>jar</packaging>
 
+    <dependencies>
+        <!-- JSON 处理工具 -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.31</version>
+        </dependency>
+        <!-- apache 提供的一些工具类 -->
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.9</version>
+        </dependency>
+    </dependencies>
 
 </project>
