spring-cloud UserService 尝试-1

--- a/yard/research/imooc-homepage-spring-cloud/homepage-service/homepage-user/pom.xml
+++ b/yard/research/imooc-homepage-spring-cloud/homepage-service/homepage-user/pom.xml
@@ -52,6 +52,7 @@
         <dependency>
             <groupId>com.imooc.homepage</groupId>
             <artifactId>homepage-common</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
