--- a/yard/research/imooc-homepage-spring-cloud/homepage-service/homepage-course/pom.xml
+++ b/yard/research/imooc-homepage-spring-cloud/homepage-service/homepage-course/pom.xml
@@ -42,6 +42,7 @@
         <dependency>
             <groupId>com.imooc.homepage</groupId>
             <artifactId>homepage-common</artifactId>
+            <version>${version}</version>
         </dependency>
     </dependencies>
 
