--- a/yard/research/dubbo-study/mall/one/api/pom.xml
+++ b/yard/research/dubbo-study/mall/one/api/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>api</artifactId>
+    <artifactId>one-api</artifactId>
 
     <dependencies>
         <!--java校验 跟 hibernate校验-->
