--- a/yard/research/dubbo-study/mall/one/server/pom.xml
+++ b/yard/research/dubbo-study/mall/one/server/pom.xml
@@ -15,28 +15,6 @@
 
     <properties>
         <start-class>com.imooc.dubbo.one.server.OneServerApplication</start-class>
-
-        <!--<spring-boot.version>1.3.3.RELEASE</spring-boot.version>-->
-        <spring-boot.version>2.0.5.RELEASE</spring-boot.version>
-
-        <spring-session.version>1.2.0.RELEASE</spring-session.version>
-        <slf4j.version>1.7.13</slf4j.version>
-        <log4j.version>1.2.17</log4j.version>
-        <mysql.version>5.1.37</mysql.version>
-        <druid.version>1.0.16</druid.version>
-        <guava.version>19.0</guava.version>
-        <joda-time.version>2.9.2</joda-time.version>
-        <cglib.version>3.1</cglib.version>
-
-        <zookeeper.version>3.4.10</zookeeper.version>
-        <curator.version>2.12.0</curator.version>
-        <dubbo.version>2.8.4</dubbo.version>
-
-        <resteasy.version>3.0.7.Final</resteasy.version>
-        <okhttp.version>3.1.2</okhttp.version>
-        <gson.version>2.6.1</gson.version>
-        <httpclient.version>4.3.6</httpclient.version>
-
     </properties>
 
     <!-- 依赖管理 -->
@@ -252,26 +230,32 @@
 
     <build>
         <!--<finalName>dubbo-study-mall-one-${project.parent.version}</finalName>-->
+        <!--<plugins>-->
+            <!--<plugin>-->
+                <!--<groupId>org.springframework.boot</groupId>-->
+                <!--<artifactId>spring-boot-maven-plugin</artifactId>-->
+                <!--<version>${spring-boot.version}</version>-->
+                <!--<executions>-->
+                    <!--<execution>-->
+                        <!--<goals>-->
+                            <!--<goal>repackage</goal>-->
+                        <!--</goals>-->
+                    <!--</execution>-->
+                <!--</executions>-->
+            <!--</plugin>-->
+            <!--<plugin>-->
+                <!--<groupId>org.apache.maven.plugins</groupId>-->
+                <!--<artifactId>maven-war-plugin</artifactId>-->
+                <!--<version>2.4</version>-->
+                <!--<configuration>-->
+                    <!--<failOnMissingWebXml>false</failOnMissingWebXml>-->
+                <!--</configuration>-->
+            <!--</plugin>-->
+        <!--</plugins>-->
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>${spring-boot.version}</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>repackage</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-war-plugin</artifactId>
-                <version>2.4</version>
-                <configuration>
-                    <failOnMissingWebXml>false</failOnMissingWebXml>
-                </configuration>
             </plugin>
         </plugins>
 
