--- a/yard/research/dubbo-study/mall/two/server/pom.xml
+++ b/yard/research/dubbo-study/mall/two/server/pom.xml
@@ -14,29 +14,7 @@
     <packaging>jar</packaging>
 
     <properties>
-        <start-class>com.debug.mooc.dubbo.two.server.BootMoreApplication</start-class>
-
-        <!--<spring-boot.version>1.3.3.RELEASE</spring-boot.version>-->
-        <spring-boot.version>2.0.5.RELEASE</spring-boot.version>
-
-        <spring-session.version>1.2.0.RELEASE</spring-session.version>
-        <slf4j.version>1.7.13</slf4j.version>
-        <log4j.version>1.2.17</log4j.version>
-        <mysql.version>5.1.37</mysql.version>
-        <druid.version>1.0.16</druid.version>
-        <guava.version>19.0</guava.version>
-        <joda-time.version>2.9.2</joda-time.version>
-        <cglib.version>3.1</cglib.version>
-
-        <zookeeper.version>3.4.10</zookeeper.version>
-        <curator.version>2.12.0</curator.version>
-        <dubbo.version>2.8.4</dubbo.version>
-
-        <resteasy.version>3.0.7.Final</resteasy.version>
-        <okhttp.version>3.1.2</okhttp.version>
-        <gson.version>2.6.1</gson.version>
-        <httpclient.version>4.3.6</httpclient.version>
-
+        <start-class>com.imooc.dubbo.two.server.TwoServerApplication</start-class>
     </properties>
 
     <!-- 依赖管理 -->
