--- a/yard/research/dubbo-study/mall/one/model/pom.xml
+++ b/yard/research/dubbo-study/mall/one/model/pom.xml
@@ -26,6 +26,13 @@
             <version>${mybatis-spring-boot.version}</version>
         </dependency>
 
+        <!-- mybatis-plus -->
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+            <version>${mybatisplus.version}</version>
+        </dependency>
+
     </dependencies>
 
 
