--- a/yard/research/dubbo-study/pom.xml
+++ b/yard/research/dubbo-study/pom.xml
@@ -31,7 +31,7 @@
         <spring-session.version>1.2.0.RELEASE</spring-session.version>
         <slf4j.version>1.7.13</slf4j.version>
         <log4j.version>1.2.17</log4j.version>
-        <mysql.version>5.1.37</mysql.version>
+        <mysql.version>5.1.41</mysql.version>
         <druid.version>1.0.16</druid.version>
         <guava.version>19.0</guava.version>
         <joda-time.version>2.9.2</joda-time.version>
@@ -44,5 +44,27 @@
         <gson.version>2.6.1</gson.version>
         <httpclient.version>4.3.6</httpclient.version>
     </properties>
+
+    <dependencies>
+        <!-- lombok 工具通过在代码编译时期动态的将注解替换为具体的代码,
+        IDEA 需要添加 lombok 插件 -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
+        </dependency>
+        <!-- JSON 处理工具 -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.31</version>
+        </dependency>
+        <!-- apache 提供的一些工具类 -->
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.9</version>
+        </dependency>
+    </dependencies>
 
 </project>
