--- a/yard/research/dubbo-study/mall/one/pom.xml
+++ b/yard/research/dubbo-study/mall/one/pom.xml
@@ -17,6 +17,21 @@
         <module>server</module>
     </modules>
 
+    <dependencies>
+        <!--spring-mybatis-->
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>${mybatis-spring-boot.version}</version>
+        </dependency>
 
+        <!-- mybatis-plus -->
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+            <version>${mybatisplus.version}</version>
+        </dependency>
+
+    </dependencies>
 
 </project>
