--- a/yard/research/dubbo-study/mall/m2/pom.xml
+++ b/yard/research/dubbo-study/mall/m2/pom.xml
@@ -10,6 +10,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>m2</artifactId>
+    <packaging>pom</packaging>
+    <modules>
+        <module>api</module>
+        <module>model</module>
+        <module>server</module>
+    </modules>
 
 
 </project>
