--- a/yard/research/dubbo-study/mall/m1/pom.xml
+++ b/yard/research/dubbo-study/mall/m1/pom.xml
@@ -12,11 +12,26 @@
     <artifactId>m1</artifactId>
     <packaging>pom</packaging>
     <modules>
-        <module>service</module>
         <module>api</module>
         <module>model</module>
         <module>server</module>
     </modules>
 
+    <dependencies>
+        <!--spring-mybatis-->
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>${mybatis-spring-boot.version}</version>
+        </dependency>
+
+        <!-- mybatis-plus -->
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+            <version>${mybatisplus.version}</version>
+        </dependency>
+
+    </dependencies>
 
 </project>
