--- a/yard/research/dubbo-study/mall/m1/server/pom.xml
+++ b/yard/research/dubbo-study/mall/m1/server/pom.xml
@@ -13,9 +13,9 @@
 
     <packaging>jar</packaging>
 
-    <properties>
-        <start-class>com.imooc.dubbo.m1.server.M1ServerApplication</start-class>
-    </properties>
+    <!--<properties>-->
+        <!--<start-class>com.imooc.dubbo.m1.server.M1ServerApplication</start-class>-->
+    <!--</properties>-->
 
     <!-- 依赖管理 -->
     <!--<dependencyManagement>-->
