配置搞晕了

--- a/yard/research/dubbo-study/mall/m1/server/src/main/resources/dubbo.properties
+++ b/yard/research/dubbo-study/mall/m1/server/src/main/resources/dubbo.properties
@@ -16,7 +16,7 @@
 dubbo.container=log4j,spring
 dubbo.reference.check=false
 dubbo.registry.client=curator
-dubbo.application.name=dubboOne-provider
+dubbo.application.name=m1-provider
 dubbo.application.owner=debug
 
 #dubbo支持的dubbo协议配置
