--- a/yard/research/dubbo-study/mall/m1/pom.xml
+++ b/yard/research/dubbo-study/mall/m1/pom.xml
@@ -19,11 +19,11 @@
 
     <dependencies>
         <!--spring-mybatis-->
-        <dependency>
-            <groupId>org.mybatis.spring.boot</groupId>
-            <artifactId>mybatis-spring-boot-starter</artifactId>
-            <version>${mybatis-spring-boot.version}</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.mybatis.spring.boot</groupId>-->
+            <!--<artifactId>mybatis-spring-boot-starter</artifactId>-->
+            <!--<version>${mybatis-spring-boot.version}</version>-->
+        <!--</dependency>-->
 
         <!-- mybatis-plus -->
         <dependency>
