--- a/yard/research/dubbo-study/mall/m1/server/src/main/resources/application.properties
+++ b/yard/research/dubbo-study/mall/m1/server/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 #profile
 #spring.profiles.active=production
 #spring.profiles.active=local
-
 server.port=8093
-#server.context-path=/dubboOne
-server.servlet.context-path=/dubboOne
+server.servlet.context-path=/m1
 
 #logging
 logging.path=logs/m1-server
-logging.file=dubboOne
+logging.file=m1
+LOG_PATH=logs/m1-server
+LOG_FILE=m1
 
 logging.level.org.springframework = INFO
 logging.level.com.fasterxml.jackson = INFO
@@ -18,20 +18,21 @@ logging.level.com.imooc.dubbo.m1 = debug
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone=GMT+8
 
-#spring.datasource.initialize=false
-spring.datasource.initialization-mode=never
+# spring
 spring.jmx.enabled=false
 
 #数据源配置
-datasource.url=jdbc:mysql://127.0.0.1:3307/imooc_dubbo?useUnicode=true&amp;characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
-datasource.username=hero
-datasource.password=1949.cn
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://127.0.0.1:3307/imooc_dubbo?useUnicode=true&amp;characterEncoding=utf-8&useSSL=false&zeroDateTimeBehavior=convertToNull
+spring.datasource.password=1949.cn
+spring.datasource.username=hero
 
-#mybatis
-#mybatis.config-location=classpath:mybatis-config.xml
-#mybatis.checkConfigLocation = true
-#mybatis.mapper-locations=classpath:mappers/*.xml
-
+# mybatisplus
+mybatis-plus.global-config.banner=false
+mybatis-plus.global-config.db-config.logic-delete-value=1
+mybatis-plus.global-config.db-config.logic-not-delete-value=0
+mybatis-plus.type-enums-package=com.baomidou.mybatisplus.samples.enums.enums
+mybatis-plus.configuration.default-enum-type-handler=org.apache.ibatis.type.EnumOrdinalTypeHandler
 
 #dubbo zookeeper配置信息
 dubbo.registry.address=zookeeper://127.0.0.1:2181
