--- a/yard/research/dubbo-study/mall/m1/server/src/main/resources/application.properties
+++ b/yard/research/dubbo-study/mall/m1/server/src/main/resources/application.properties
@@ -2,13 +2,13 @@
 #spring.profiles.active=production
 #spring.profiles.active=local
 server.port=8093
-server.servlet.context-path=/m1
+#server.servlet.context-path=/m1
 
 #logging
 logging.path=logs/m1-server
 logging.file=m1
-LOG_PATH=logs/m1-server
-LOG_FILE=m1
+#LOG_PATH=logs/m1-server
+#LOG_FILE=m1
 
 logging.level.org.springframework = INFO
 logging.level.com.fasterxml.jackson = INFO
@@ -31,8 +31,8 @@ spring.datasource.username=hero
 mybatis-plus.global-config.banner=false
 mybatis-plus.global-config.db-config.logic-delete-value=1
 mybatis-plus.global-config.db-config.logic-not-delete-value=0
-mybatis-plus.type-enums-package=com.baomidou.mybatisplus.samples.enums.enums
-mybatis-plus.configuration.default-enum-type-handler=org.apache.ibatis.type.EnumOrdinalTypeHandler
+#mybatis-plus.type-enums-package=com.baomidou.mybatisplus.samples.enums.enums
+#mybatis-plus.configuration.default-enum-type-handler=org.apache.ibatis.type.EnumOrdinalTypeHandler
 
 #dubbo zookeeper配置信息
-dubbo.registry.address=zookeeper://127.0.0.1:2181
+#dubbo.registry.address=zookeeper://127.0.0.1:2181
