mp quickstart init

--- a/yard/skills/66-java/study/mp/pom.xml
+++ b/yard/skills/66-java/study/mp/pom.xml
@@ -13,6 +13,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>mp-quickstart</module>
+        <module>mp-quickstart</module>
     </modules>
 
     <properties>
