--- a/yard/skills/66-java/mp-study/pom.xml
+++ b/yard/skills/66-java/mp-study/pom.xml
@@ -8,6 +8,7 @@
         <module>mp-logic-delete</module>
         <module>mp-optimistic-locker</module>
         <module>mp-auto-fill-metainfo</module>
+        <module>mp-xenum</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
