--- a/yard/skills/66-java/mp-study/mp-optimistic-locker/src/main/resources/application.yml
+++ b/yard/skills/66-java/mp-study/mp-optimistic-locker/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:3307/imooc_mp
+    url: jdbc:mysql://127.0.0.1:3307/java_study?useUnicode=true&characterEncoding=utf-8&useSSL=false&zeroDateTimeBehavior=convertToNull
     username: hero
     password: 1949.cn
 
