--- a/yard/skills/66-java/mp-study/mp-auto-fill-metainfo/pom.xml
+++ b/yard/skills/66-java/mp-study/mp-auto-fill-metainfo/pom.xml
@@ -11,5 +11,13 @@
 
     <artifactId>mp-auto-fill-metainfo</artifactId>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
