--- a/yard/skills/66-java/mp-study/mp-zz/pom.xml
+++ b/yard/skills/66-java/mp-study/mp-zz/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>mp-xenum</artifactId>
+    <artifactId>mp-zz</artifactId>
 
     <dependencies>
         <dependency>
