Sql Injector 未成功

--- a/yard/skills/66-java/mp-study/pom.xml
+++ b/yard/skills/66-java/mp-study/pom.xml
@@ -14,6 +14,7 @@
         <module>mp-active-record</module>
         <module>mp-curd</module>
         <module>mp-pagination</module>
+        <module>mp-sql-injector</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
