增加 多租户机制

--- a/yard/skills/66-java/mp-study/pom.xml
+++ b/yard/skills/66-java/mp-study/pom.xml
@@ -16,6 +16,7 @@
         <module>mp-pagination</module>
         <module>mp-sql-injector</module>
         <module>mp-wrapper</module>
+        <module>mp-tenant</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
