增加性能分析

--- a/yard/skills/66-java/mp-study/pom.xml
+++ b/yard/skills/66-java/mp-study/pom.xml
@@ -17,6 +17,7 @@
         <module>mp-sql-injector</module>
         <module>mp-wrapper</module>
         <module>mp-tenant</module>
+        <module>mp-performance-analysis</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
