--- a/yard/skills/66-java/spring-boot-study/pom.xml
+++ b/yard/skills/66-java/spring-boot-study/pom.xml
@@ -8,6 +8,7 @@
         <module>spring-boot-swagger</module>
         <module>spring-boot-rabbit-mq</module>
         <module>spring-boot-redis</module>
+        <module>spring-boot-scheduler</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
