add google guava

--- a/yard/skills/66-java/open-lib-study/pom.xml
+++ b/yard/skills/66-java/open-lib-study/pom.xml
@@ -5,6 +5,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>open-lib-hutool</module>
+        <module>open-lib-google-guava</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
