--- a/yard/skills/66-java/spring-boot-study/spring-boot-rabbit-mq/src/main/resources/application.properties
+++ b/yard/skills/66-java/spring-boot-study/spring-boot-rabbit-mq/src/main/resources/application.properties
@@ -4,5 +4,6 @@ spring.application.name=spring-boot-rabbitmq-demo
 
 spring.rabbitmq.host=server1
 spring.rabbitmq.port=5672
-spring.rabbitmq.username=guest
-spring.rabbitmq.password=guest
+spring.rabbitmq.username=hero
+spring.rabbitmq.password=1949.cn
+spring.rabbitmq.virtual-host=/study
