Makefile with gen

--- a/yard/skills/66-java/mp-study/Makefile
+++ b/yard/skills/66-java/mp-study/Makefile
@@ -11,6 +11,8 @@ endif
 install:
 	mvn clean install -DskipTests
 
+gen:
+	rsync -avP /tmp/mp.gen/ mp-auto-gen/src/main/java/
 
 # ####################################
 # git
