mp 联合查询 框架

--- a/yard/skills/66-java/mp-study/pom.xml
+++ b/yard/skills/66-java/mp-study/pom.xml
@@ -20,6 +20,7 @@
         <module>mp-performance-analysis</module>
         <module>mp-type-handler</module>
         <module>mp-auto-gen</module>
+        <module>mp-comb-search</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
