--- a/yard/skills/66-go/Makefile
+++ b/yard/skills/66-go/Makefile
@@ -14,6 +14,18 @@ init: init-cobra-demo
 
 
 # ####################################
+# Deps AREA
+# ####################################
+deps: deps-http deps-logs
+
+deps-http:
+	go get -u github.com/gin-gonic/gin
+
+deps-logs:
+	go get -u go.uber.org/zap
+
+
+# ####################################
 # Init AREA
 # ####################################
 init-cobra-demo:
